--- a/ecom/src/assets/scss/main.scss
+++ b/ecom/src/assets/scss/main.scss
@@ -34,7 +34,7 @@ body {
 
 ul {
   margin: 0px;
-  padding: 0px;
+  padding: 0px !important;
 }
 
 li {
